adds margin to footer skills buttons

--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,9 @@ ul {
   box-shadow: 1px 1px 1px var(--Platinum)
 }
 
+.btn-group-lg>.btn, .btn-lg {
+  margin: 2px;
+}
 
 
 /*----------------------------------------------
