fixes some html errors

--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,10 @@ ul {
   margin: 2px;
 }
 
+.footerBtn {
+  margin-left: 5px;
+  margin-right: 5px;
+}
 
 /*----------------------------------------------
     ------------------------------------------------
